# 9e6ee44f

./: .gitignore  Makefile  README.md  pyproject.toml
src/jobrad/: __main__.py
src/jobrad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/jobrad/core/fastapi/: __init__.py  routes.py  settings.py  templates.py  uvicorn.py
src/jobrad/core/service/: chat_service.py
src/jobrad/domain/: chat_message.py  chat_notification.py  chat_room.py
src/jobrad/infrastructure/: logging.py  settings.py
src/jobrad/templates/: _layout.html.j2  agent.html.j2  customer.html.j2
static/: chat.js  stylesheet.css
